# wafel_bruteforcer

./: Cargo.toml  LICENSE
src/: bounds.rs  bruteforce_params.rs  bruteforcer.rs  coinrng.rs  main.rs
