[package]
name = "wafel_bruteforcer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wafel_api = { git = "https://github.com/branpk/wafel", default-features = false }
rand = "0.9.1"
once_cell = "1.21.3"